[package]
name = "beobot-scrapper"
version = "0.1.0"
edition = "2021"
authors = ["zolkko <zolkko@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
reqwest = "0.11"
scraper = "0.13"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
itertools = "0.10"
nom = "7"